--- a/vercel.json
+++ b/vercel.json
@@ -3,15 +3,7 @@
     "builds": [
         {
             "src": "finance_tracker/wsgi.py",
-            "use": "@vercel/python",
-            "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-        },
-        {
-            "src": "build_files.sh",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "staticfiles_build/static"
-            }
+            "use": "@vercel/python"
         }
     ],
     "routes": [
@@ -23,5 +15,8 @@
             "src": "/(.*)",
             "dest": "finance_tracker/wsgi.py"
         }
-    ]
+    ],
+    "env": {
+        "DJANGO_SETTINGS_MODULE": "finance_tracker.settings"
+    }
 }
