--- a/vercel.json
+++ b/vercel.json
@@ -3,20 +3,16 @@
     "builds": [
         {
             "src": "finance_tracker/wsgi.py",
-            "use": "@vercel/python"
+            "use": "@vercel/python",
+            "config": {
+                "maxLambdaSize": "15mb"
+            }
         }
     ],
     "routes": [
         {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
-        {
             "src": "/(.*)",
             "dest": "finance_tracker/wsgi.py"
         }
-    ],
-    "env": {
-        "DJANGO_SETTINGS_MODULE": "finance_tracker.settings"
-    }
+    ]
 }
