--- a/vercel.json
+++ b/vercel.json
@@ -14,5 +14,8 @@
             "src": "/(.*)",
             "dest": "finance_tracker/wsgi.py"
         }
-    ]
+    ],
+    "env": {
+        "VERCEL": "1"
+    }
 }
