--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,14 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "finance_tracker/wsgi.py",
-            "use": "@vercel/python",
-            "config": {
-                "maxLambdaSize": "15mb"
-            }
+    "functions": {
+        "finance_tracker/wsgi.py": {
+            "runtime": "python3.9"
         }
-    ],
+    },
     "routes": [
         {
             "src": "/(.*)",
             "dest": "finance_tracker/wsgi.py"
         }
-    ],
-    "env": {
-        "VERCEL": "1"
-    }
+    ]
 }
