--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
     "version": 2,
-    "functions": {
-        "finance_tracker/wsgi.py": {
-            "runtime": "python3.9"
+    "builds": [
+        {
+            "src": "finance_tracker/wsgi.py",
+            "use": "@vercel/python"
         }
-    },
+    ],
     "routes": [
         {
             "src": "/(.*)",
